2010-05-05       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-ch/wrapc.c:  changed signbitl, signbitf
	  to signbit as signbit is a macro which tests its
	  parameter type and calls the correct underlying function.

2010-05-04       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/FIO.mod:  more bugs fixes.  Removed
	  used MaxNoOfFiles.  Set endoffile if read returns 0.
	  Replaced f<MaxNoOfFiles by f#Error and only UnReadChar
	  in EOLN if the previous read is successful.

2010-05-03       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/FIO.mod:  forgot to copy osfd into unixfd.
	  Which meant that the default files: stdin, stdout, stderr
	  were assigned to 1, 2, 3, rather than 0, 1, 2.
	* gm2/gm2-libs/FIO.mod:  reimplemented EOF using a new state
	  which is detected upon a failed read.

2010-05-01       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/FIO.mod:  huge number of changes so that it
	  uses a dynamic array to allow an operating system specific
	  number of files to be opened simultaneously.  Fixes a
	  limitation reported by Scott Iverson.

2010-04-30       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  ensure that we do attempt
	  to fold an indirect procedure function call.
	* gm2/gm2-compiler/M2Quads.mod:  ensure that the symbol is
	  a procedure sym before checking if it has a builtin
	  alternative.
	* gm2/gm2-compiler/M2GenGCC.mod:  doParam (New procedure).
	  FoldBuiltin (New procedure).  Changes allow gcc builtins
	  to be called from constant expressions.
	* gm2/gm2-compiler/M2Quads.mod:  modified
	  BuildConstFunctionCall to allow gcc builtins to be called.
	* gm2/gm2-compiler/gccgm2.def:  export SetLastFunction.
	* This fixes a bug reported by Steve Giess.

2010-04-30       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/Indexing.def:  moved to
	* gm2/gm2-libs/Indexing.def:  new file.
	* gm2/gm2-compiler/Indexing.mod:  moved to
	* gm2/gm2-libs/Indexing.mod:  new file.
	* gm2/gm2-compiler/M2Quads.def:  PushInConstExpression,