@@ -50,6 +50,8 @@ DEFINE_LANG_NAME ("Modula-2")
       N_("use the PIM dialect libraries which include coroutine support") },
   { "-fnil", 
       N_("turns on runtime checking to detect accessing data through a NIL value pointer") },
+  { "-fno-nil", 
+      N_("turns off runtime checking to detect accessing data through a NIL value pointer") },
   { "-fwholediv",
       N_("generate code to detect whole number division by zero or modulus by zero") },
   { "-fno-wholediv",
@@ -64,10 +66,18 @@ DEFINE_LANG_NAME ("Modula-2")
       N_("do not generate code to check the assignment range, return value range, set range and constructor range") },
   { "-freturn",
       N_("turns on runtime checking for functions which finish without executing a RETURN statement") },
+  { "-fno-return",
+      N_("turns off runtime checking for functions which finish without executing a RETURN statement") },
   { "-fcase",
       N_("turns on runtime checking to check whether a CASE statement requires an ELSE clause when on was not specified") },
+  { "-fno-case",
+      N_("turns off runtime checking to check whether a CASE statement requires an ELSE clause when on was not specified") },
   { "-fcheck-all",
-      N_("turns on all runtime checking (an abbreviation for -fnil -frange -findex -fwholediv -fcase -freturn)") },
+      N_("turns on all runtime checking (an abbreviation for -fnil -frange -findex -fwholediv -fcase -freturn -fwholediv)") },
+  { "-fno-check-all",
+      N_("turns off all runtime checking (an abbreviation for -fno-nil -fno-range -fno-index -fno-wholediv -fno-case -fno-return -fwholediv)") },
+  { "-fexceptions",
+      N_("turns on all exception generating code (this is on by default)") },
   { "-fno-exceptions",
       N_("turns off all exception generating code, this flag should be used with -flibs=min") },
   { "-Wstudents",
